scroll left and right

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="css/home.css" />
+
     <title>Ecommerce</title>
   </head>
   <body>
@@ -149,7 +150,21 @@
             <span class="price">$20</span><span class="actual-price">$40</span>
           </div>
         </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card8.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whislist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">a short line about the cloth..</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
       </div>
     </section>
+
+    <script src="js/home.js"></script>
   </body>
 </html>
